# project_orbit

./: .gitignore  README.md
backend/: api_spec.json  db.py  index.py
backend/app_def/: app_def.py  build_parser.py
backend/db/: __init__.py  db.py  mongodb.py  sqlite.py
backend/models/: projects.py  test_cases.py  test_cycles.py  test_executions.py
backend/orbit_def/: orbit_def.py
backend/routes/: __init__.py  cycles.py  executions.py  projects.py  root.py  test_cases.py  test_cycles.py  test_executions.py  utility.py
backend/tests/: backend_tests.py
backend/tools/: __init__.py  tools.py  utility.py
docker/: Dockerfile_backend  Dockerfile_frontend  Dockerfile_mongodb  README.md
dockerfiles/: Dockerfile.postgres  Dockerfile_backend  README.md  docker-compose.yml  docker_setup.sh
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  proxy.conf.json
frontend/src/app/: app.html  app.spec.ts  app.ts
poetry-env/: activate_environment.bash  pyproject.toml  requirements.txt
tests/: backend_tests.py  conftest.py
